--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:js": "jest --testRegex tests/unit/**/test.*.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages -o docs --dry-run"
+    "deploy-storybook": "storybook-to-ghpages -o docs --ci --host-token-env-variable=GITHUB_TOKEN --branch=storybook"
   },
   "devDependencies": {
     "@babel/core": "7.14.8",
