--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "watch": "env WEBPACK_PACKAGE=webpack5 npx webpack --watch --mode=development --progress",
     "watch-css": "npm-watch build-assets:css",
+    "build-assets:ci": "env NODE_ENV=development WEBPACK_PACKAGE=webpack5 npx webpack --mode=production",
     "build-assets:webpack": "env NODE_ENV=production WEBPACK_PACKAGE=webpack5 npx webpack --mode=production",
     "build-assets": "make js && make css && make components",
     "build-assets:css": "make css",
