--- a/package.json
+++ b/package.json
@@ -105,7 +105,10 @@
         "statements": 17
       }
     },
-    "collectCoverage": true
+    "collectCoverage": true,
+    "globals": {
+      "PRODUCTION": false
+    }
   },
   "dependencies": {}
 }
